--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
         <h2 class="subtitle has-text-centered">
           (If the video is slightly lagging behind the audio, please try using a different device.) </h2>
         <video id="main_video" controls="" playsinline="" height="100%">
-          <source src="./assets/video/demo.mp4" type="video/mp4">
+          <!--<source src="./assets/video/demo.mp4" type="video/mp4">-->
+          <source src="https://hjhgjghhg-1304275113.cos.ap-shanghai.myqcloud.com/usr/demo/demo.mp4" type="video/mp4">
         </video>
       </div>
     </div>
@@ -227,10 +228,10 @@
     <table style="border-collapse:separate; border-spacing:0px 10px;">
       <tr>
         <td width="50%"> <video id="showcases1" controls="" playsinline="" height="90%">
-          <source src="./assets/video/in-domain case1 all.mp4" type="video/mp4">
+          <source src="https://hjhgjghhg-1304275113.cos.ap-shanghai.myqcloud.com/usr/demo/in-domain%20case1%20all.mp4" type="video/mp4">
         </video> </td>
         <td width="50%"> <video id="showcases2" controls="" playsinline="" height="90%">
-          <source src="./assets/video/in-domain case2.mp4" type="video/mp4">
+          <source src="https://hjhgjghhg-1304275113.cos.ap-shanghai.myqcloud.com/usr/demo/in-domain%20case2.mp4" type="video/mp4">
         </video> </td>
       </tr>
       </table>
@@ -242,10 +243,10 @@
     <table style="border-collapse:separate; border-spacing:0px 10px;">
       <tr>
         <td width="50%"> <video id="showcases3" controls="" playsinline="" height="90%">
-          <source src="./assets/video/out-of-domain case1.mp4" type="video/mp4">
+          <source src="https://hjhgjghhg-1304275113.cos.ap-shanghai.myqcloud.com/usr/demo/out-of-domain%20case1.mp4" type="video/mp4">
         </video> </td>
         <td width="50%"> <video id="showcases4" controls="" playsinline="" height="90%">
-          <source src="./assets/video/out-of-domain case2.mp4" type="video/mp4">
+          <source src="https://hjhgjghhg-1304275113.cos.ap-shanghai.myqcloud.com/usr/demo/out-of-domain%20case2.mp4" type="video/mp4">
         </video> </td>
       </tr>
       </table>
@@ -283,14 +284,14 @@ We conduct a user study with 30 users. We randomly select 10 speeches from the t
 
     <h3 class="title is-4">Text-prompt guided emotional talking head generation</h3>
     <video controls style="width: 80%; margin: auto; display: block;">
-      <source src="./assets/video/text.mp4" type="video/mp4">
+      <source src="https://hjhgjghhg-1304275113.cos.ap-shanghai.myqcloud.com/usr/demo/text.mp4" type="video/mp4">
     </video>
 
     <p>&nbsp;&nbsp;&nbsp;</p>
 
     <h3 class="title is-4">Audio-prompt guided emotional talking head generation</h3>
     <video controls style="width: 80%; margin: auto; display: block;">
-      <source src="./assets/video/audio.mp4" type="video/mp4">
+      <source src="https://hjhgjghhg-1304275113.cos.ap-shanghai.myqcloud.com/usr/demo/audio.mp4" type="video/mp4">
     </video>
 
   </div>
