--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <h2 class="title is-3">Video Intro</h2>
         <h2 class="subtitle has-text-centered">
           (If the video is slightly lagging behind the audio, please try using a different device.) </h2>
-        <video id="main_video" controls="" playsinline="" height="100%">
+        <video controls style="width: 100%; margin: auto; display: block;">
         <source src="./assets/video/demo.mp4" type="video/mp4">
         </video>
       </div>
