--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
   </div>
 </section>
 
-<!--Main Video-->
+
+<!--
 <section class="section">
   <div class="container is-max-desktop">
-    <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video Intro</h2>
@@ -135,9 +135,9 @@
         </video>
       </div>
     </div>
-    <!--/ Abstract. -->
   </div>
 </section>
+-->
 
 <!-- Methodology -->
 <section class="hero is-light is-small">
@@ -226,10 +226,10 @@
     <h4 class="title is-5">Part1. In-Domain Comparison</h4>
     <table style="border-collapse:separate; border-spacing:0px 10px;">
       <tr>
-        <td width="50%"> <video id="showcases1" controls="" playsinline="" height="90%">
+        <td width="50%"> <video controls style="width: 90%; margin: auto; display: block;">
           <source src="./assets/video/in-domain case1 all.mp4" type="video/mp4">
         </video> </td>
-        <td width="50%"> <video id="showcases2" controls="" playsinline="" height="90%">
+        <td width="50%"> <video controls style="width: 90%; margin: auto; display: block;">
           <source src="./assets/video/in-domain case2.mp4" type="video/mp4">
         </video> </td>
       </tr>
@@ -241,10 +241,10 @@
     <h4 class="title is-5">Part2. In-The-Wild Comparison</h4>
     <table style="border-collapse:separate; border-spacing:0px 10px;">
       <tr>
-        <td width="50%"> <video id="showcases3" controls="" playsinline="" height="90%">
+        <td width="50%"> <video controls style="width: 90%; margin: auto; display: block;">
           <source src="./assets/video/out-of-domain case1.mp4" type="video/mp4">
         </video> </td>
-        <td width="50%"> <video id="showcases4" controls="" playsinline="" height="90%">
+        <td width="50%"> <video controls style="width: 90%; margin: auto; display: block;">
           <source src="./assets/video/out-of-domain case2.mp4" type="video/mp4">
         </video> </td>
       </tr>
