--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
     </div>
     <h3 class="title is-4">Qualitative Evaluation</h3>
     <h4 class="title is-5">Part1. In-Domain Comparison</h4>
+    <video controls style="width: 80%; margin: auto; display: block;">
+      <source src="./assets/video/in-domain case1 all.mp4" type="video/mp4">
+    </video>
+    <video controls style="width: 80%; margin: auto; display: block;">
+      <source src="./assets/video/in-domain case2.mp4" type="video/mp4">
+    </video>
+    <!--
     <table style="border-collapse:separate; border-spacing:0px 10px;">
       <tr>
         <td width="50%"> <video controls style="width: 90%; margin: auto; display: block;">
@@ -234,6 +241,7 @@
         </video> </td>
       </tr>
       </table>
+      -->
       Our method follows the specified emotion and keeps the shape of face, while other methods fail in generating right lips, following the emotion, or keeping the shape of face.
 
     <p>&nbsp;&nbsp;&nbsp;</p>
