--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 </section>
 
 
-<!--
+
 <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
@@ -130,14 +130,12 @@
         <h2 class="title is-3">Video Intro</h2>
         <h2 class="subtitle has-text-centered">
           (If the video is slightly lagging behind the audio, please try using a different device.) </h2>
-        <video controls style="width: 100%; margin: auto; display: block;">
-        <source src="./assets/video/demo.mp4" type="video/mp4">
-        </video>
+          <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/y1rni7?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
       </div>
     </div>
   </div>
 </section>
--->
+
 
 <!-- Methodology -->
 <section class="hero is-light is-small">
@@ -224,24 +222,12 @@
     </div>
     <h3 class="title is-4">Qualitative Evaluation</h3>
     <h4 class="title is-5">Part1. In-Domain Comparison</h4>
-    <video controls style="width: 80%; margin: auto; display: block;">
-      <source src="./assets/video/in-domain case1 all.mp4" type="video/mp4">
-    </video>
-    <video controls style="width: 80%; margin: auto; display: block;">
-      <source src="./assets/video/in-domain case2.mp4" type="video/mp4">
-    </video>
-    <!--
     <table style="border-collapse:separate; border-spacing:0px 10px;">
       <tr>
-        <td width="50%"> <video controls style="width: 90%; margin: auto; display: block;">
-          <source src="./assets/video/in-domain case1 all.mp4" type="video/mp4">
-        </video> </td>
-        <td width="50%"> <video controls style="width: 90%; margin: auto; display: block;">
-          <source src="./assets/video/in-domain case2.mp4" type="video/mp4">
-        </video> </td>
+        <td width="50%"> <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/0tvuqi?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div> </td>
+        <td width="50%"> <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/b5su3d?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div> </td>
       </tr>
       </table>
-      -->
       Our method follows the specified emotion and keeps the shape of face, while other methods fail in generating right lips, following the emotion, or keeping the shape of face.
 
     <p>&nbsp;&nbsp;&nbsp;</p>
@@ -249,12 +235,8 @@
     <h4 class="title is-5">Part2. In-The-Wild Comparison</h4>
     <table style="border-collapse:separate; border-spacing:0px 10px;">
       <tr>
-        <td width="50%"> <video controls style="width: 90%; margin: auto; display: block;">
-          <source src="./assets/video/out-of-domain case1.mp4" type="video/mp4">
-        </video> </td>
-        <td width="50%"> <video controls style="width: 90%; margin: auto; display: block;">
-          <source src="./assets/video/out-of-domain case2.mp4" type="video/mp4">
-        </video> </td>
+        <td width="50%"> <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/oqao5x?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div> </td>
+        <td width="50%"> <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/6rwu2j?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div> </td>
       </tr>
       </table>
       Our method generates the most accurate lip when following the specific emotion.
@@ -290,16 +272,12 @@ We conduct a user study with 30 users. We randomly select 10 speeches from the t
       </div>
 
     <h3 class="title is-4">Text-prompt guided emotional talking head generation</h3>
-    <video controls style="width: 80%; margin: auto; display: block;">
-      <source src="./assets/video/text.mp4" type="video/mp4">
-    </video>
+    <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/b3kply?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
 
     <p>&nbsp;&nbsp;&nbsp;</p>
 
     <h3 class="title is-4">Audio-prompt guided emotional talking head generation</h3>
-    <video controls style="width: 80%; margin: auto; display: block;">
-      <source src="./assets/video/audio.mp4" type="video/mp4">
-    </video>
+    <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/lph5n9?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
 
   </div>
 </section>
