--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
     section:last-child {
       margin-bottom: 0; /* 最后一个section不减小间距 */
     }
+    .iframe-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .iframe-container iframe {
+    width: 49%; /* Adjust width as needed */
+    height: 300px; /* Adjust height as needed */
+    border: none;
+  }
 </style>
 
 <!--   Global site tag (gtag.js) - Google Analytics-->
@@ -63,7 +72,6 @@
   <script src="./static/js/bulma-carousel.min.js"></script>
   <script src="./static/js/bulma-slider.min.js"></script>
   <script src="./static/js/index.js"></script>
-
 
 
 </head>
@@ -222,23 +230,20 @@
     </div>
     <h3 class="title is-4">Qualitative Evaluation</h3>
     <h4 class="title is-5">Part1. In-Domain Comparison</h4>
-    <table style="border-collapse:separate; border-spacing:0px 10px;">
-      <tr>
-        <td width="50%"> <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/0tvuqi?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div> </td>
-        <td width="50%"> <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/b5su3d?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div> </td>
-      </tr>
-      </table>
-      Our method follows the specified emotion and keeps the shape of face, while other methods fail in generating right lips, following the emotion, or keeping the shape of face.
+    <div class="iframe-container">
+      <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/0tvuqi?" width="1280" style="border:none;"></iframe>
+      <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/b5su3d?loop=0" width="1280" style="border:none;"></iframe>
+    </div>
+    Our method follows the specified emotion and keeps the shape of face, while other methods fail in generating right lips, following the emotion, or keeping the shape of face.
+    
 
     <p>&nbsp;&nbsp;&nbsp;</p>
 
     <h4 class="title is-5">Part2. In-The-Wild Comparison</h4>
-    <table style="border-collapse:separate; border-spacing:0px 10px;">
-      <tr>
-        <td width="50%"> <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/oqao5x?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div> </td>
-        <td width="50%"> <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/6rwu2j?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div> </td>
-      </tr>
-      </table>
+    <div class="iframe-container">
+      <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/oqao5x?loop=0" width="1280" style="border:none;"></iframe>
+      <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/6rwu2j?loop=0" width="1280" style="border:none;"></iframe>
+    </div>
       Our method generates the most accurate lip when following the specific emotion.
 
     <br><br>
