--- a/index.html
+++ b/index.html
@@ -31,9 +31,18 @@
     display: flex;
     justify-content: space-between;
   }
+  .iframe-container-one {
+    display: flex;
+    justify-content: space-between;
+  }
   .iframe-container iframe {
     width: 49%; /* Adjust width as needed */
     height: 300px; /* Adjust height as needed */
+    border: none;
+  }
+  .iframe-container-one iframe {
+    width: 100%; /* Adjust width as needed */
+    height: 420px; /* Adjust height as needed */
     border: none;
   }
 </style>
@@ -59,19 +68,20 @@
 <link rel="icon" href="./img/github-6980894_1280.png" type="image/x-icon"/>
 <link rel="shortcut icon" href="./img/github-6980894_1280.png" type="image/x-icon"/>
 
-  <link rel="stylesheet" href="./static/css/bulma.min.css">
-  <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
-  <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
-  <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
+  <link rel="stylesheet" href="static/css/bulma.min.css">
+  <link rel="stylesheet" href="static/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="static/css/bulma-slider.min.css">
+  <link rel="stylesheet" href="static/css/fontawesome.all.min.css">
   <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-  <link rel="stylesheet" href="./static/css/index.css">
+  href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+  <link rel="stylesheet" href="static/css/index.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script defer src="./static/js/fontawesome.all.min.js"></script>
-  <script src="./static/js/bulma-carousel.min.js"></script>
-  <script src="./static/js/bulma-slider.min.js"></script>
-  <script src="./static/js/index.js"></script>
+  <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+  <script defer src="static/js/fontawesome.all.min.js"></script>
+  <script src="static/js/bulma-carousel.min.js"></script>
+  <script src="static/js/bulma-slider.min.js"></script>
+  <script src="static/js/index.js"></script>
 
 
 </head>
@@ -167,7 +177,6 @@
   </div>
 </section>
 
-<!--
 <section class="section">
   <div class="container is-max-desktop">
 
@@ -175,10 +184,7 @@
         <h2 class="title is-3">Showcases</h2>
       </div>
 
-    <h3 class="title is-4">Audio-Driven (without expressions)</h3>
-    <p>
-      Audio driven cases without multi-modal style control.
-    </p>
+    <h3 class="title is-4">Audio-Driven (with expressions)</h3>
     <table style="border-collapse:separate; border-spacing:0px 10px;">
     <tr>
       <td width="50%"> <video id="showcases1" controls="" playsinline="" height="90%">
@@ -190,22 +196,65 @@
     </tr>
     </table>
 
-    <br><br>
+    <p>&nbsp;&nbsp;&nbsp;</p>
     <h3 class="title is-4">Multi-modal Style Control</h3>
-    <table style="border-collapse:separate; border-spacing:0px 10px;">
-    <tr>
-      <td width="50%"> <video id="showcases1" controls="" playsinline="" height="90%">
-        <source src="./assets/video/test.mp4" type="video/mp4">
-      </video> </td>
-      <td width="50%"> <video id="showcases1" controls="" playsinline="" height="90%">
-        <source src="./assets/video/test.mp4" type="video/mp4">
-      </video> </td>
-    </tr>
-    </table>
+    <div class="iframe-container">
+      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/b3kply?loop=0" width="1920" style="border:none;"></iframe>
+      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/lph5n9?loop=0" width="1920" style="border:none;"></iframe>
+    </div>
+
+    <p>&nbsp;&nbsp;&nbsp;</p>
+    <h3 class="title is-4">Fine-grained Emotion Control</h3>
+    xxx
+    <p>&nbsp;&nbsp;&nbsp;</p>
+    <h4 class="title is-5">Angry-Surprise</h4>
+    <div id="results-carousel" class="carousel results-carousel">
+      <div class="item item-compare1">
+        <div class="iframe-container-one">
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/v05x5m?loop=0" width="1280" style="border:none;"></iframe>
+        </div>
+      </div>
+      <div class="item item-compare2">
+        <div class="iframe-container-one">
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/mec38d?loop=0" width="1280" style="border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+
+    <p>&nbsp;&nbsp;&nbsp;</p>
+    <h4 class="title is-5">Neutral-Happy</h4>
+    <div id="results-carousel" class="carousel results-carousel">
+      <div class="item item-compare1">
+        <div class="iframe-container-one">
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/82r540?loop=0" width="1280" style="border:none;"></iframe>
+        </div>
+      </div>
+      <div class="item item-compare2">
+        <div class="iframe-container-one">
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/rnj25t?loop=0" width="1280" style="border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+
+    <p>&nbsp;&nbsp;&nbsp;</p>
+    <h4 class="title is-5">Sad-Happy</h4>
+    <div id="results-carousel" class="carousel results-carousel">
+      <div class="item item-compare1">
+        <div class="iframe-container-one">
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/t0mu9o?loop=0" width="1280" style="border:none;"></iframe>
+        </div>
+      </div>
+      <div class="item item-compare2">
+        <div class="iframe-container-one">
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/80qd4q?loop=0" width="1280" style="border:none;"></iframe>
+        </div>
+      </div>
+    </div>
 
   </div>
 </section>
--->
+
+
 
 <!-- Baseline compare -->
 <section class="section">
@@ -230,9 +279,17 @@
     </div>
     <h3 class="title is-4">Qualitative Evaluation</h3>
     <h4 class="title is-5">Part1. In-Domain Comparison</h4>
-    <div class="iframe-container">
-      <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/0tvuqi?" width="1280" style="border:none;"></iframe>
-      <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/b5su3d?loop=0" width="1280" style="border:none;"></iframe>
+    <div id="results-carousel" class="carousel results-carousel">
+      <div class="item item-compare1">
+        <div class="iframe-container-one">
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/0tvuqi?" width="1280" style="border:none;"></iframe>
+        </div>
+      </div>
+      <div class="item item-compare2">
+        <div class="iframe-container-one">
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/b5su3d?loop=0" width="1280" style="border:none;"></iframe>
+        </div>
+      </div>
     </div>
     Our method follows the specified emotion and keeps the shape of face, while other methods fail in generating right lips, following the emotion, or keeping the shape of face.
     
@@ -240,9 +297,17 @@
     <p>&nbsp;&nbsp;&nbsp;</p>
 
     <h4 class="title is-5">Part2. In-The-Wild Comparison</h4>
-    <div class="iframe-container">
-      <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/oqao5x?loop=0" width="1280" style="border:none;"></iframe>
-      <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/6rwu2j?loop=0" width="1280" style="border:none;"></iframe>
+    <div id="results-carousel" class="carousel results-carousel">
+      <div class="item item-compare1">
+        <div class="iframe-container-one">
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/oqao5x?loop=0" width="1280" style="border:none;"></iframe>
+        </div>
+      </div>
+      <div class="item item-compare2">
+        <div class="iframe-container-one">
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/6rwu2j?loop=0" width="1280" style="border:none;"></iframe>
+        </div>
+      </div>
     </div>
       Our method generates the most accurate lip when following the specific emotion.
 
@@ -275,14 +340,6 @@ We conduct a user study with 30 users. We randomly select 10 speeches from the t
       <div class="section-title">
         <h2 class="title is-3">Ablation Studies</h2>
       </div>
-
-    <h3 class="title is-4">Text-prompt guided emotional talking head generation</h3>
-    <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/b3kply?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
-
-    <p>&nbsp;&nbsp;&nbsp;</p>
-
-    <h3 class="title is-4">Audio-prompt guided emotional talking head generation</h3>
-    <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/lph5n9?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
 
   </div>
 </section>
