--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     display: flex;
     justify-content: space-between;
   }
+  .iframe-container-three {
+    display: flex;
+    justify-content: space-between;
+  }
   .iframe-container iframe {
     width: 49%; /* Adjust width as needed */
     height: 300px; /* Adjust height as needed */
@@ -43,6 +47,11 @@
   .iframe-container-one iframe {
     width: 100%; /* Adjust width as needed */
     height: 420px; /* Adjust height as needed */
+    border: none;
+  }
+  .iframe-container-three iframe {
+    width: 33%; /* Adjust width as needed */
+    height: 200px; /* Adjust height as needed */
     border: none;
   }
 </style>
@@ -183,19 +192,20 @@
       <div class="section-title">
         <h2 class="title is-3">Showcases</h2>
       </div>
-<!--
     <h3 class="title is-4">Audio-Driven (with expressions)</h3>
-    <table style="border-collapse:separate; border-spacing:0px 10px;">
-    <tr>
-      <td width="50%"> <video id="showcases1" controls="" playsinline="" height="90%">
-        <source src="./assets/video/test.mp4" type="video/mp4">
-      </video> </td>
-      <td width="50%"> <video id="showcases1" controls="" playsinline="" height="90%">
-        <source src="./assets/video/test.mp4" type="video/mp4">
-      </video> </td>
-    </tr>
-    </table>
--->
+    <div id="results-carousel" class="carousel results-carousel">
+      <div class="item item-compare1">
+        <div class="iframe-container-one">
+          <iframe allow="fullscreen" allowfullscreen height="426" src="https://streamable.com/e/45bvhx?loop=0" width="1278" style="border:none;"></iframe>
+        </div>
+      </div>
+      <div class="item item-compare2">
+        <div class="iframe-container-one">
+          <iframe allow="fullscreen" allowfullscreen height="426" src="https://streamable.com/e/j82mim?loop=0" width="1278" style="border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+
     <p>&nbsp;&nbsp;&nbsp;</p>
     <h3 class="title is-4">Multi-modal Style Control</h3>
     <div class="iframe-container">
@@ -205,7 +215,7 @@
 
     <p>&nbsp;&nbsp;&nbsp;</p>
     <h3 class="title is-4">Fine-grained Emotion Control</h3>
-    xxx
+    For fine-grained emotion control, we adapt the classifier-free guidance to interpolate and extrapolate emotions. We can easily control the intensity of arbitrary emotion as follows.
     <p>&nbsp;&nbsp;&nbsp;</p>
     <h4 class="title is-5">Angry-Surprise</h4>
     <div id="results-carousel" class="carousel results-carousel">
