--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     display: flex;
     justify-content: space-between;
   }
-  .iframe-container-three {
+  .iframe-container-one-small {
     display: flex;
     justify-content: space-between;
   }
@@ -46,12 +46,12 @@
   }
   .iframe-container-one iframe {
     width: 100%; /* Adjust width as needed */
-    height: 420px; /* Adjust height as needed */
+    height: 400px; /* Adjust height as needed */
     border: none;
   }
-  .iframe-container-three iframe {
-    width: 33%; /* Adjust width as needed */
-    height: 200px; /* Adjust height as needed */
+  .iframe-container-one-small iframe {
+    width: 100%; /* Adjust width as needed */
+    height: 240px; /* Adjust height as needed */
     border: none;
   }
 </style>
@@ -195,12 +195,18 @@
     <h3 class="title is-4">Audio-Driven (with expressions)</h3>
     <div id="results-carousel" class="carousel results-carousel">
       <div class="item item-compare1">
-        <div class="iframe-container-one">
+        <div class="section-title">
+          <h4 class="title is-5">Emotion: Anger</h5>
+        </div>
+        <div class="iframe-container-one-small">
           <iframe allow="fullscreen" allowfullscreen height="426" src="https://streamable.com/e/45bvhx?loop=0" width="1278" style="border:none;"></iframe>
         </div>
       </div>
       <div class="item item-compare2">
-        <div class="iframe-container-one">
+        <div class="section-title">
+          <h4 class="title is-5">Emotion: Surprised</h5>
+        </div>
+        <div class="iframe-container-one-small">
           <iframe allow="fullscreen" allowfullscreen height="426" src="https://streamable.com/e/j82mim?loop=0" width="1278" style="border:none;"></iframe>
         </div>
       </div>
